--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -4,8 +4,16 @@
 // The prefix to use on all css classes from ant.
 @ant-prefix: ant;
 
+// -------- Palette ----------
+
+@caya-blue: #00bbff;
+@caya-black: #333a40;
+@caya-white: #ffffff;
+@caya-creme: #f7f9fb;
+@caya-pale-grey: #fafbfd;
+
 // -------- Colors -----------
-@primary-color: @blue-6;
+@primary-color: @caya-blue;
 @info-color: @blue-6;
 @success-color: @green-6;
 @processing-color: @blue-6;
@@ -13,8 +21,8 @@
 @highlight-color: @red-6;
 @warning-color: @gold-6;
 @normal-color: #d9d9d9;
-@white: #fff;
-@black: #000;
+@white: @caya-white;
+@black: @caya-black;
 
 // Color used by default to control hover and active backgrounds and for
 // alert info backgrounds.
